crates/lang-parse/tests/snapshots/parser__parser_mod.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: 7222212393417214198,
        tree: (
            inner: (
                span: (
                    start: 0,
                    end: 22,
                ),
                statements: (
                    span: (
                        start: 0,
                        end: 22,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    statements: [
                        (InlineModule((
                            span: (
                                start: 0,
                                end: 22,
                            ),
                            keyword_span: (
                                start: 0,
                                end: 3,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            doc: (
                                span: (
                                    start: 0,
                                    end: 22,
                                ),
                                lines: [],
                            ),
                            attr: ([]),
                            vis: None,
                            id: (
                                span: (
                                    start: 4,
                                    end: 7,
                                ),
                                name: "foo",
                            ),
                            body: (
                                span: (
                                    start: 8,
                                    end: 22,
                                ),
                                statements: (
                                    span: (
                                        start: 9,
                                        end: 21,
                                    ),
                                    extras: (
                                        leading: ([
                                            Whitespace((" ")),
                                        ]),
                                        trailing: ([]),
                                    ),
                                    statements: [
                                        (Function((
                                            span: (
                                                start: 10,
                                                end: 21,
                                            ),
                                            keyword_span: (
                                                start: 10,
                                                end: 12,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([
                                                    Whitespace((" ")),
                                                ]),
                                            ),
                                            doc: (
                                                span: (
                                                    start: 10,
                                                    end: 10,
                                                ),
                                                lines: [],
                                            ),
                                            attr: ([]),
                                            vis: None,
                                            id: (
                                                span: (
                                                    start: 13,
                                                    end: 16,
                                                ),
                                                name: "bar",
                                            ),
                                            parameters: (
                                                span: (
                                                    start: 17,
                                                    end: 17,
                                                ),
                                                extras: (
                                                    leading: ([]),
                                                    trailing: ([]),
                                                ),
                                                parameters: [],
                                            ),
                                            return_type: None,
                                            body: (
                                                span: (
                                                    start: 18,
                                                    end: 20,
                                                ),
                                                statements: (
                                                    span: (
                                                        start: 19,
                                                        end: 19,
                                                    ),
                                                    extras: (
                                                        leading: ([]),
                                                        trailing: ([]),
                                                    ),
                                                    statements: [],
                                                    tail: None,
                                                ),
                                            ),
                                        )), ([])),
                                    ],
                                    tail: None,
                                ),
                            ),
                        )), ([])),
                    ],
                    tail: None,
                ),
            ),
            hash: 24873361157968770,
        ),
    ),
)
---
