crates/lang-parse/tests/snapshots/parser__parser_multi line comment.snap
---
source: crates/lang-parse/tests/parser.rs
expression: parse(input)
---
Ok(
    Ast {
        span: 0..55,
        statements: StatementList {
            span: 0..55,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [
                (
                    LocalAssignment(
                        LocalAssignment {
                            span: 0..5,
                            extras: ItemExtras {
                                leading: LeadingExtras(
                                    [],
                                ),
                                trailing: TrailingExtras(
                                    [],
                                ),
                            },
                            attr: [],
                            id: Identifier {
                                span: 0..1,
                                name: "a",
                            },
                            ty: None,
                            expr: Literal(
                                Literal {
                                    span: 4..5,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    literal: Integer(
                                        IntegerLiteral {
                                            span: 4..5,
                                            value: 1,
                                            raw: "1",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    TrailingExtras(
                        [
                            Whitespace(
                                Whitespace(
                                    " ",
                                ),
                            ),
                            Comment(
                                Comment {
                                    span: 7..44,
                                    inner: MultiLine(
                                        "multi\n    line\n    comment",
                                    ),
                                },
                            ),
                            Whitespace(
                                Whitespace(
                                    "\n    ",
                                ),
                            ),
                        ],
                    ),
                ),
                (
                    LocalAssignment(
                        LocalAssignment {
                            span: 49..54,
                            extras: ItemExtras {
                                leading: LeadingExtras(
                                    [],
                                ),
                                trailing: TrailingExtras(
                                    [],
                                ),
                            },
                            attr: [],
                            id: Identifier {
                                span: 49..50,
                                name: "b",
                            },
                            ty: None,
                            expr: Literal(
                                Literal {
                                    span: 53..54,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    literal: Integer(
                                        IntegerLiteral {
                                            span: 53..54,
                                            value: 2,
                                            raw: "2",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    TrailingExtras(
                        [],
                    ),
                ),
            ],
            tail: None,
        },
    },
)
