crates/lang-parse/tests/snapshots/parser__parser_multiple binary operator.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: 14166735810993827697,
        tree: (
            inner: (
                span: (
                    start: 0,
                    end: 9,
                ),
                statements: (
                    span: (
                        start: 0,
                        end: 9,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    statements: [],
                    tail: Some((
                        span: (
                            start: 0,
                            end: 9,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        attr: ([]),
                        expr: BinaryOperation((
                            span: (
                                start: 0,
                                end: 9,
                            ),
                            lhs: BinaryOperation((
                                span: (
                                    start: 0,
                                    end: 7,
                                ),
                                lhs: Bracketed(BinaryOperation((
                                    span: (
                                        start: 1,
                                        end: 4,
                                    ),
                                    lhs: Literal((
                                        span: (
                                            start: 1,
                                            end: 2,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        literal: Integer((
                                            span: (
                                                start: 1,
                                                end: 2,
                                            ),
                                            value: 1,
                                            raw: "1",
                                        )),
                                    )),
                                    op: (
                                        span: (
                                            start: 2,
                                            end: 3,
                                        ),
                                        value: Add,
                                    ),
                                    rhs: Literal((
                                        span: (
                                            start: 3,
                                            end: 4,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        literal: Integer((
                                            span: (
                                                start: 3,
                                                end: 4,
                                            ),
                                            value: 2,
                                            raw: "2",
                                        )),
                                    )),
                                )), (
                                    start: 0,
                                    end: 5,
                                )),
                                op: (
                                    span: (
                                        start: 5,
                                        end: 6,
                                    ),
                                    value: Multiply,
                                ),
                                rhs: Literal((
                                    span: (
                                        start: 6,
                                        end: 7,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    literal: Integer((
                                        span: (
                                            start: 6,
                                            end: 7,
                                        ),
                                        value: 3,
                                        raw: "3",
                                    )),
                                )),
                            )),
                            op: (
                                span: (
                                    start: 7,
                                    end: 8,
                                ),
                                value: Add,
                            ),
                            rhs: Literal((
                                span: (
                                    start: 8,
                                    end: 9,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                literal: Integer((
                                    span: (
                                        start: 8,
                                        end: 9,
                                    ),
                                    value: 1,
                                    raw: "1",
                                )),
                            )),
                        )),
                    )),
                ),
            ),
            hash: 7193975364125998805,
        ),
    ),
)
---
