crates/lang-parse/tests/snapshots/parser__parser_multiple element access.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0xd4812cad756e3e39",
        output_hash: "0xb7117e724ee9500d",
        tree: (
            span: (
                start: 0,
                end: 22,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 22,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 22,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: ElementAccess((
                        span: (
                            start: 0,
                            end: 22,
                        ),
                        expr: SymbolPath((
                            span: (
                                start: 0,
                                end: 3,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            prefix: None,
                            parts: [
                                (
                                    span: (
                                        start: 0,
                                        end: 3,
                                    ),
                                    name: "foo",
                                ),
                            ],
                        )),
                        element_chain: [
                            (
                                span: (
                                    start: 3,
                                    end: 6,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                inner: ArrayElement(Literal((
                                    span: (
                                        start: 4,
                                        end: 5,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    literal: Integer((
                                        span: (
                                            start: 4,
                                            end: 5,
                                        ),
                                        value: 1,
                                        raw: "1",
                                    )),
                                ))),
                            ),
                            (
                                span: (
                                    start: 6,
                                    end: 10,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                inner: Attribute((
                                    span: (
                                        start: 7,
                                        end: 10,
                                    ),
                                    name: "bar",
                                )),
                            ),
                            (
                                span: (
                                    start: 10,
                                    end: 14,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                inner: Tuple((
                                    span: (
                                        start: 11,
                                        end: 14,
                                    ),
                                    name: "asd",
                                )),
                            ),
                            (
                                span: (
                                    start: 14,
                                    end: 22,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                inner: Method((
                                    span: (
                                        start: 15,
                                        end: 22,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    name: (
                                        span: (
                                            start: 15,
                                            end: 19,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        prefix: None,
                                        parts: [
                                            (
                                                span: (
                                                    start: 15,
                                                    end: 19,
                                                ),
                                                name: "call",
                                            ),
                                        ],
                                    ),
                                    arguments: (
                                        span: (
                                            start: 20,
                                            end: 21,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        arguments: [
                                            Unnamed((
                                                span: (
                                                    start: 20,
                                                    end: 21,
                                                ),
                                                extras: (
                                                    leading: ([]),
                                                    trailing: ([]),
                                                ),
                                                expr: Literal((
                                                    span: (
                                                        start: 20,
                                                        end: 21,
                                                    ),
                                                    extras: (
                                                        leading: ([]),
                                                        trailing: ([]),
                                                    ),
                                                    literal: Integer((
                                                        span: (
                                                            start: 20,
                                                            end: 21,
                                                        ),
                                                        value: 1,
                                                        raw: "1",
                                                    )),
                                                )),
                                            )),
                                        ],
                                    ),
                                )),
                            ),
                        ],
                    )),
                )),
            ),
        ),
    ),
)
---
