crates/lang-parse/tests/snapshots/parser__parser_named one-tuple, trailing.snap
---
source: crates/lang-parse/tests/parser.rs
expression: "microcad_lang_parse::parse(&microcad_lang_base::Source::from(input))"
---
Ok(
    (
        Ast {
            span: 0..13,
            statements: StatementList {
                span: 0..13,
                extras: ItemExtras {
                    leading: LeadingExtras(
                        [],
                    ),
                    trailing: TrailingExtras(
                        [],
                    ),
                },
                statements: [],
                tail: Some(
                    ExpressionStatement {
                        span: 0..13,
                        extras: ItemExtras {
                            leading: LeadingExtras(
                                [],
                            ),
                            trailing: TrailingExtras(
                                [],
                            ),
                        },
                        attr: [],
                        expr: Tuple(
                            TupleExpression {
                                span: 0..13,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                values: [
                                    TupleItem {
                                        span: 1..11,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        id: Some(
                                            Identifier {
                                                span: 1..7,
                                                name: "length",
                                            },
                                        ),
                                        expr: Literal(
                                            Literal {
                                                span: 10..11,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                literal: Integer(
                                                    IntegerLiteral {
                                                        span: 10..11,
                                                        value: 1,
                                                        raw: "1",
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                ),
            },
        },
        Diagnostics {
            error_count: 0,
            warning_count: 0,
            diagnostics: [],
        },
    ),
)
